Cleaned up other parsers.